--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
         "postcss": "^8.1.14",
         "sass": "^1.55.0",
         "vite": "^3.0.0"
+    },
+    "dependencies": {
+        "photoswipe": "^5.3.3"
     }
 }
